[package]
name = "matscan-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
default-net = "0.22.0"
libc = "0.2.153"
pnet = "0.34.0"
pnet_macros_support = "0.34.0"
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
