[package]
name = "te-mass-finder"
version = "0.1.0"
edition = "2021"
authors = ["Paddyk45"]
description = "Finds terraria servers"

[dependencies]
ipnet = "2.9.0"
log = "0.4.21"
simple_logger = "4.3.3"
matscan-tcp = { path = "../matscan-tcp" }
matscan-ranges = { version = "0.1.0", path = "../matscan-ranges" }
once_cell = "1.19.0"
fastrand = "2.0.1"
pnet_packet = "0.34.0"
te-terraria-protocol = { version = "0.1.0", path = "../te-terraria-protocol" }

[profile.release]
debug = true
